# HomeWorks

./: .dockerignore  .gitignore  Dockerfile  app.py  config.py  database.py  docker-compose.yml  dz2_1.py  dz2_2.py  extend_school.sql  form.py  main.py  pyproject.toml  rpc_client.py  rpc_server.py  school.sql  tests.py
about/: urls.py  views.py
alembic/: env.py
alembic/versions/: 2024_12_25_1834-8b3716c4ce9b_initial.py
courses/: admin.py  models.py  urls.py  views.py
courses/migrations/: 0001_initial.py  0002_initial.py
django_project/: settings.py  urls.py
lessons/: models.py
lessons/migrations/: 0001_initial.py
lms/: settings.py  urls.py
lms/lms/: settings.py
models/: __init__.py  models.py
randomapp/: urls.py  views.py
static/css/: styles.css
tasks/: admin.py  forms.py  models.py
tasks/migrations/: 0001_initial.py  0002_initial.py  0003_alter_taskanswer_mark.py  0004_alter_taskanswer_mark.py
templates/: add_answer.html  add_lecture.html  add_task.html  base.html  course_details.html  courses.html  create_course.html  grade_answer.html  index.html  rating.html  register.html  users.html
templates/auth/: login.html  register.html
templates/courses/: course_detail.html  course_list.html  index.html
templates/includes/: footer.html  header.html
templates/user/: course_detail.html  course_list.html  dashboard.html  submit_task_answer.html
user/: admin.py  forms.py  models.py  urls.py  views.py
user/migrations/: 0001_initial.py  0002_auto_20250128_1957.py
user/templatetags/: custom_filters.py
