[tool.poetry]
name = "homeworks"
version = "0.1.0"
description = ""
authors = ["AntonSkyrda <mr.skyrda@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.1.0"
psycopg2-binary = "^2.9.10"
sqlalchemy = "^2.0.36"
alembic = "^1.14.0"
pydantic = "^2.10.3"
pydantic-settings = "^2.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
